@@ -47,7 +47,6 @@ import static org.junit.Assert.assertTrue;
 import static org.ops4j.pax.exam.CoreOptions.mavenBundle;
 import static org.ops4j.pax.exam.CoreOptions.options;
 
-import com.google.common.collect.ImmutableMap;
 import com.xebialabs.restito.semantics.Action;
 import com.xebialabs.restito.semantics.Call;
 import com.xebialabs.restito.semantics.Condition;
@@ -81,7 +80,6 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.collections.CollectionUtils;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.karaf.bundle.core.BundleService;
 import org.codice.ddf.itests.common.AbstractIntegrationTest;
@@ -137,8 +135,6 @@ public class TestFederation extends AbstractIntegrationTest {
 
   private static final String RECORD_TITLE_2 = "myXmlTitle";
 
-  private static final String CONNECTED_SOURCE_ID = "cswConnectedSource";
-
   private static final String CSW_STUB_SOURCE_ID = "cswStubServer";
 
   private static final String CSW_SOURCE_WITH_METACARD_XML_ID = "cswSource2";
@@ -154,14 +150,10 @@ public class TestFederation extends AbstractIntegrationTest {
   private static final DynamicUrl RESTITO_STUB_SERVER =
       new DynamicUrl("https://localhost:", RESTITO_STUB_SERVER_PORT, SUBSCRIBER);
 
-  private static final Path PRODUCT_CACHE = Paths.get("data", "Product_Cache");
-
   private static final DynamicPort CSW_STUB_SERVER_PORT = new DynamicPort(7);
 
   private static final DynamicUrl CSW_STUB_SERVER_PATH =
       new DynamicUrl(INSECURE_ROOT, CSW_STUB_SERVER_PORT, "/services/csw");
-
-  private static final int NO_RETRIES = 0;
 
   private static final String POLL_INTERVAL = "pollInterval";
 
@@ -193,20 +185,15 @@ public class TestFederation extends AbstractIntegrationTest {
 
   private static String gmdPid;
 
-  private static String connectedPid;
-
   @Rule public TestName testName = new TestName();
 
   @Rule public ConditionalIgnoreRule rule = new ConditionalIgnoreRule();
-
-  private final List<String> resourcesToDelete = new ArrayList<>();
 
   private UrlResourceReaderConfigurator urlResourceReaderConfigurator;
 
   public static String getSimpleXml(String uri) {
     return "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>\n"
-        + getFileContent(
-            XML_RECORD_RESOURCE_PATH + "/SimpleXmlNoDecMetacard", ImmutableMap.of("uri", uri));
+        + getFileContent(XML_RECORD_RESOURCE_PATH + "/SimpleXmlNoDecMetacard", Map.of("uri", uri));
   }
 
   @BeforeExam
@@ -349,12 +336,6 @@ public class TestFederation extends AbstractIntegrationTest {
 
     urlResourceReaderConfigurator.setUrlResourceReaderRootDirs(
         DEFAULT_URL_RESOURCE_READER_ROOT_RESOURCE_DIRS);
-
-    for (String resource : resourcesToDelete) {
-      FileUtils.deleteQuietly(new File(resource));
-    }
-
-    resourcesToDelete.clear();
 
     cswServer.stop();
 
@@ -722,7 +703,7 @@ public class TestFederation extends AbstractIntegrationTest {
             .getQuery();
 
     // Declare array of matchers so we can be sure we use the same matchers in each assertion
-    Matcher[] assertion =
+    Matcher<?>[] assertion =
         new Matcher[] {
           hasXPath(
               "/GetRecordsResponse/SearchResults/Record/identifier[text()='"
@@ -828,7 +809,7 @@ public class TestFederation extends AbstractIntegrationTest {
 
   @Test
   @Ignore("https://github.com/codice/ddf/issues/6798")
-  public void testOpensearchToCswSourceToCswEndpointQuerywithMetacardXml() {
+  public void testOpensearchToCswSourceToCswEndpointQueryWithMetacardXml() {
     ValidatableResponse response =
         getOpenSearch(
             "xml", null, null, "q=" + DEFAULT_KEYWORD, "src=" + CSW_SOURCE_WITH_METACARD_XML_ID);
@@ -914,7 +895,7 @@ public class TestFederation extends AbstractIntegrationTest {
               .get("value.findAll { source -> source.id == name}");
       String openSearchPid =
           (String)
-              ((ArrayList<Map<String, Object>>) (sources.get(0).get("configurations")))
+              ((ArrayList<Map<String, Object>>) sources.get(0).get("configurations"))
                   .get(0)
                   .get("id");
 
@@ -1256,7 +1237,7 @@ public class TestFederation extends AbstractIntegrationTest {
    */
   @Test
   @Ignore("https://github.com/codice/ddf/issues/6798")
-  public void testRetrievalReliablility() throws Exception {
+  public void testRetrievalReliability() throws Exception {
     try {
       getSecurityPolicy().configureWebContextPolicy("PKI|BASIC", "PKI|BASIC", null, null);
 
@@ -1627,7 +1608,7 @@ public class TestFederation extends AbstractIntegrationTest {
 
     return getFileContent(
         "csw-query-response.xml",
-        ImmutableMap.of(
+        Map.of(
             "sourceId",
             CSW_STUB_SOURCE_ID,
             "httpRoot",
